Refine content in hello.html and update layout in pets.html for better readability

--- a/hello.html
+++ b/hello.html
@@ -22,9 +22,9 @@
 
         <nav> 
 
-            <a href="#">Home</a> 
+            <a href="hello.html">Home</a> 
 
-            <a href="#">Pets</a> 
+            <a href="pets.html">Pets</a> 
 
             <a href="#">Contact</a> 
 
@@ -70,7 +70,7 @@
 
                 <div class="pet">
                     <img src="petshop-img\capybaras\capybara02.jpg" alt="Cute Bird">
-                    <p>ok I pullup -  Capybara</p>
+                    <p>ok I pullup</p>
                     <button onclick="adoptPet()">Will you pull up?</button>
                 </div>
 
@@ -84,7 +84,6 @@
             <div id="contact" style="display: flex; gap: 24px; align-items: flex-start; width: 60%; margin: 0 auto;">
                 <div id="address" style="flex: 1;">
                     <h2>Our Pet Shop</h2>
-                    <p>88 หมู่ที่ 8 ถนน บางนา-ตราด Bang Sao Thong, Bang Sao Thong District, Samut Prakan 10540</p>
                     <p>Email: <strong>info@petstore.com</strong></p>
                 </div>
                 <div id="map" style="flex: 2; margin: 10px 0;">
