--- a/pets.html
+++ b/pets.html
@@ -1,60 +1,34 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pet Store</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Welcome to Our Pet Store</h1>
+        <nav>
+            <a href="hello.html">Home</a>
+            <a href="pets.html">Pets</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
 
-<html lang="en"> 
+    <main>
+        <section class="featured">
+            <h2>Featured Pets</h2>
+            <div class="pet-list" id="pet-list">
+        </section>
+        <section class="contact">
+        </section>
+    </main>
 
-<head> 
-
-    <meta charset="UTF-8"> 
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-
-    <title>Pet Store</title> 
-
-    <link rel="stylesheet" href="styles.css"> 
-    
-</head> 
-
-<body> 
-
-    <header> 
-
-        <h1>Welcome to Our Pet Store</h1> 
-
-        <nav> 
-
-            <a href="hello.html">Home</a> 
-
-            <a href="pets.html">Pets</a> 
-
-            <a href="#contact">Contact</a> 
-
-        </nav> 
-
-    </header> 
-
- 
-
-    <main> 
-
-        <section class="featured"> 
-
-            <h2>All Pets</h2> 
-
-            <div class="pet-list"> 
-
-
-
-            </div> 
-
-        </section> 
-
-    </main> 
-
-    <footer id="contact" style="background-color: rgb(255, 255, 255);">
+    <footer id="contact">
             <div id="contact" style="display: flex; gap: 24px; align-items: flex-start; width: 60%; margin: 0 auto;">
                 <div id="address" style="flex: 1;">
                     <h2>Our Pet Shop</h2>
-                    <p>88 หมู่ที่ 8 ถนน บางนา-ตราด Bang Sao Thong, Bang Sao Thong District, Samut Prakan 10540</p>
                     <p>Email: <strong>info@petstore.com</strong></p>
                 </div>
                 <div id="map" style="flex: 2; margin: 10px 0;">
@@ -64,11 +38,8 @@
 
     </footer>
 
- 
-
+    <script src="loadpets.js"></script>
     <script src="script.js"></script>
-    <script src="loadpets.js"></script> 
 
-</body> 
-
-</html> 
+</body>
+</html>
