--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
         <nav> 
 
-            <a href="hello.html">Home</a> 
+            <a href="index.html">Home</a> 
 
             <a href="pets.html">Pets</a> 
 
-            <a href="#">Contact</a> 
+            <a href="#contact">Contact</a> 
 
         </nav> 
 
