--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
 
                 <div class="pet">
-                    <img src="petshop-img\capybaras\capybara02.jpg" alt="Cute Bird">
+                    <img src="petshop-img\capybaras\capybara02.jpg" alt="Cute Capybara">
                     <p>ok I pullup</p>
                     <button onclick="adoptPet()">Will you pull up?</button>
                 </div>
@@ -80,7 +80,7 @@
 
     </main> 
 
-    <footer id="contact" style="background-color: rgb(255, 255, 255);">
+    <footer id="contact">
             <div id="contact" style="display: flex; gap: 24px; align-items: flex-start; width: 60%; margin: 0 auto;">
                 <div id="address" style="flex: 1;">
                     <h2>Our Pet Shop</h2>
