--- a/pets.html
+++ b/pets.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pet Store</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <h1>Welcome to Our Pet Store</h1>
@@ -19,27 +21,43 @@
     <main>
         <section class="featured">
             <h2>Featured Pets</h2>
+            <div style="display: flex; gap: 24px; justify-content: center">
+                Type:
+                <div style="display: flex;">
+                    <div><input type="checkbox" id="type-dogs" name="pet-type" value="Dog" checked/> Dogs</div>
+                    <div><input type="checkbox" id="type-cats" name="pet-type" value="Cat" checked/> Cats</div>
+                    <div><input type="checkbox" id="type-capybaras" name="pet-type" value="Capybara" checked/> Capybaras</div>
+                    <div><input type="checkbox" id="type-birds" name="pet-type" value="Bird" checked/> Birds</div>
+                </div>
+            </div>
+
             <div class="pet-list" id="pet-list">
+            </div>
         </section>
         <section class="contact">
         </section>
     </main>
 
     <footer id="contact">
-            <div id="contact" style="display: flex; gap: 24px; align-items: flex-start; width: 60%; margin: 0 auto;">
-                <div id="address" style="flex: 1;">
-                    <h2>Our Pet Shop</h2>
-                    <p>Email: <strong>info@petstore.com</strong></p>
-                </div>
-                <div id="map" style="flex: 2; margin: 10px 0;">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3877.757578305562!2d100.83534157410966!3d13.611612686765792!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x311d430e775155f9%3A0xf01923824353260!2sAssumption%20University%20Suvarnabhumi%20Campus!5e0!3m2!1sen!2sth!4v1749542866348!5m2!1sen!2sth" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
+        <div id="contact" style="display: flex; gap: 24px; align-items: flex-start; width: 60%; margin: 0 auto;">
+            <div id="address" style="flex: 1;">
+                <h2>Our Pet Shop</h2>
+                <p>Email: <strong>info@petstore.com</strong></p>
             </div>
+            <div id="map" style="flex: 2; margin: 10px 0;">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3877.757578305562!2d100.83534157410966!3d13.611612686765792!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x311d430e775155f9%3A0xf01923824353260!2sAssumption%20University%20Suvarnabhumi%20Campus!5e0!3m2!1sen!2sth!4v1749542866348!5m2!1sen!2sth"
+                    width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
 
     </footer>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="loadpets.js"></script>
     <script src="script.js"></script>
 
 </body>
+
 </html>
